add_library(APBInterfaces INTERFACE)

target_sources(APBInterfaces
  INTERFACE FILE_SET HEADERS
  FILES APBCommon_if.sv
)

install(TARGETS ${ARG_TARGET} EXPORT ${ARG_TARGET} FILE_SET HEADERS
DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}/nyu/${ARG_TARGET})
install(EXPORT ${ARG_TARGET} NAMESPACE nyu::
DESTINATION ${CMAKE_INSTALL_DATAROOTDIR}/cmake/${ARG_PACKAGE})
